logs/pyamf.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyAMF-0.8.0.egg-info'...
Listing './lib/python3.5/site-packages/cpyamf'...
Listing './lib/python3.5/site-packages/defusedxml'...
Listing './lib/python3.5/site-packages/defusedxml-0.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyamf'...
Listing './lib/python3.5/site-packages/pyamf/adapters'...
Compiling './lib/python3.5/site-packages/pyamf/adapters/_sqlalchemy_orm.py'...
***   File "./lib/python3.5/site-packages/pyamf/adapters/_sqlalchemy_orm.py", line 25
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyamf/adapters/tests'...
Listing './lib/python3.5/site-packages/pyamf/adapters/tests/django_app'...
Listing './lib/python3.5/site-packages/pyamf/adapters/tests/django_app/adapters'...
Listing './lib/python3.5/site-packages/pyamf/adapters/tests/google'...
Compiling './lib/python3.5/site-packages/pyamf/adapters/tests/google/test_blobstore.py'...
***   File "./lib/python3.5/site-packages/pyamf/adapters/tests/google/test_blobstore.py", line 38
    'creation': datetime.datetime(2010, 07, 11, 14, 15, 01)
                                         ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/pyamf/adapters/tests/google/test_ndb.py'...
***   File "./lib/python3.5/site-packages/pyamf/adapters/tests/google/test_ndb.py", line 175
    b'\x10\x00\x08pyamf.SM\x00\x04_key\x05\x00\x0bage_in_2000\x00@:'
    ^
SyntaxError: cannot mix bytes and nonbytes literals

Listing './lib/python3.5/site-packages/pyamf/flex'...
Listing './lib/python3.5/site-packages/pyamf/remoting'...
Compiling './lib/python3.5/site-packages/pyamf/remoting/__init__.py'...
***   File "./lib/python3.5/site-packages/pyamf/remoting/__init__.py", line 356
    raise get_exception_from_fault(self), self.description, None
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyamf/remoting/client'...
Compiling './lib/python3.5/site-packages/pyamf/remoting/client/__init__.py'...
***   File "./lib/python3.5/site-packages/pyamf/remoting/client/__init__.py", line 449
    except urllib2.URLError, e:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyamf/remoting/gateway'...
Listing './lib/python3.5/site-packages/pyamf/tests'...
Listing './lib/python3.5/site-packages/pyamf/tests/gateway'...
Listing './lib/python3.5/site-packages/pyamf/tests/modules'...
Listing './lib/python3.5/site-packages/pyamf/tests/remoting'...
Compiling './lib/python3.5/site-packages/pyamf/tests/test_amf0.py'...
***   File "./lib/python3.5/site-packages/pyamf/tests/test_amf0.py", line 1172
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyamf/tests/test_amf3.py'...
***   File "./lib/python3.5/site-packages/pyamf/tests/test_amf3.py", line 1659
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyamf/tests/test_basic.py'...
***   File "./lib/python3.5/site-packages/pyamf/tests/test_basic.py", line 246
    self.assertRaises(TypeError, pyamf.add_type, 234234L)
                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyamf/tests/test_imports.py'...
***   File "./lib/python3.5/site-packages/pyamf/tests/test_imports.py", line 98
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyamf/tests/test_util.py'...
***   File "./lib/python3.5/site-packages/pyamf/tests/test_util.py", line 389
    (4294967295L,),
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyamf/util'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
